# SoionOption

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_CI.txt
artifacts/: DEMO1_status.json  DEMO1_summary.json
configs/: logging.json  refs_sample.json
data/: README.md  nothingsupposedhere.md
docs/: option_snapshot_fact_standard.md
docs/reference_code/: test_logging_smoke.py
docs/reference_code/apps/: __init__.py  run_option_qc.py
docs/reference_code/ingestion/option_chain/: worker.py
docs/reference_code/quant_engine/runtime/: artifacts.py  backtest.py  bootstrap.py  context.py  driver.py  lifecycle.py  log_router.py  mock.py  realtime.py  snapshot.py  warmup.py
docs/reference_code/quant_engine/utils/: app_wiring.py  asyncio.py  asyncio_health.py  guards.py
scripts/: init_data_cache.py
src/apps/: run_option_qc.py
src/ingestion/contracts/: __init__.py  calendar.json  market.py  normalize.py  source.py  tick.py  worker.py
src/ingestion/option_chain/: __init__.py  normalize.py  source.py
src/quant_engine/data/: __init__.py
src/quant_engine/data/contracts/: cache.py  gap_features.json  protocol_realtime.py  snapshot.py
src/quant_engine/data/derivatives/: __init__.py  option_design.txt
src/quant_engine/runtime/: modes.py
src/quant_engine/utils/: __init__.py  cleaned_path_resolver.py  logger.py  num.py  paths.py  timer.py
src/soion_option_demo/: __init__.py  io.py  mc.py  pipeline.py  qc.py  regime.py  sde.py  surface.py
tests/: test_path_sanity.py  test_scaffold_smoke.py
(+14 files in other folders)
